# tori_markdown_viewer

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build.yml
assets/: tori_markdown_viewer.desktop
src/: AppSettings.cpp  AppSettings.h  MainWindow.cpp  MainWindow.h  MarkdownRenderer.cpp  MarkdownRenderer.h  SourceHighlighter.cpp  SourceHighlighter.h  ThemeManager.cpp  ThemeManager.h  ViewerWidget.cpp  ViewerWidget.h  app.rs  main.cpp  main.rs  settings.rs
themes/: decorated_dark.css  decorated_light.css  normal_dark.css  normal_light.css
