[package]
name = "tori_markdown_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe    = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui      = "0.28"
egui_commonmark = { version = "0.16", features = ["better_syntax_highlighting"] }
notify    = "6"
serde     = { version = "1", features = ["derive"] }
rfd       = { version = "0.14", features = ["xdg-portal"] }

[profile.release]
opt-level = 2
strip     = true
